Added a diary page with responsive grid and various fixes on overall responsive design..

--- a/Foody.Web/Views/Administration/_RecipesPartial.cshtml
+++ b/Foody.Web/Views/Administration/_RecipesPartial.cshtml
@@ -28,7 +28,7 @@
 
                     <ul class="food-items">
                         <li class="food-item">
-                            <button class="remove-button">Remove</button>
+                            <i class="fas fa-times remove-button"></i>
                             <select name="1|ItemNewRecipe" id="1|ItemNewRecipe">
                                 <option value="potato">Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
@@ -41,7 +41,7 @@
                             <input type="number" name="1|AmountNewRecipe" id="1|AmountNewRecipe" placeholder="Please enter amount.." />
                         </li>
                         <li class="food-item">
-                            <button class="remove-button">Remove</button>
+                            <i class="fas fa-times remove-button"></i>
                             <select name="2|ItemNewRecipe" id="2|ItemNewRecipe">
                                 <option value="potato">Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
@@ -84,7 +84,7 @@
 
                     <ul class="food-items">
                         <li class="food-item">
-                            <button class="remove-button">Remove</button>
+                            <i class="fas fa-times remove-button"></i>
                             <select name="1|Itemmusaka" id="1|Itemmusakae">
                                 <option value="potato" selected>Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
@@ -97,7 +97,7 @@
                             <input type="number" name="1|Amountmusaka" id="1|Amountmusaka" value="200" />
                         </li>
                         <li class="food-item">
-                            <button class="remove-button">Remove</button>
+                            <i class="fas fa-times remove-button"></i>
                             <select name="2|Itemmusaka" id="2|Itemmusaka">
                                 <option value="potato">Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
