--- a/Foody.Web/wwwroot/css/menu.scss
+++ b/Foody.Web/wwwroot/css/menu.scss
@@ -10,6 +10,10 @@
     @include responsive( laptop ) {
         padding: 1em;
     }
+
+    @include responsive( small-phone ) {
+        padding: 0;
+    }
 }
 
 .menu-bar {
@@ -80,6 +84,16 @@
         font-weight: 900;
         position: relative;
 
+        @include responsive( phone ) {
+            padding: 1em 0.3em;
+        }
+
+        @include responsive( small-phone ) {
+            padding: 1em 0.1em;
+            font-size: 0.9em;
+            height: 100%;
+        }
+
         &:hover {
             background-color: white;
             color: var(--template-primary-color, blue);
@@ -123,6 +137,11 @@
         @include responsive( mobile ) {
             border-right: 3px solid var(--template-primary-color-invert, yellow);
             animation: menu-list-clicked-item-drop 0.3s ease-out;
+        }
+
+        @include responsive( small-phone ) {
+            font-size: 1em;
+            padding: 0.85em 0.2em;
         }
 
         &:after {
@@ -180,6 +199,14 @@
         animation-fill-mode: forwards;
     }
 
+    @include responsive( phone ) {
+        flex: 0 0 95%;
+    }
+
+    @include responsive( small-phone ) {
+        flex: 0 0 100%;
+    }
+
     & .search-area {
         text-align: center;
         padding: 1em;
@@ -220,7 +247,7 @@
         background-color: #f8f8f8;
         padding: 0.6em;
         align-items: center;
-        
+
 
         & p {
             flex-basis: 33%;
@@ -309,19 +336,36 @@
             & .food-item {
                 list-style: none outside;
                 display: flex;
-                justify-content: space-around;
+                justify-content: space-evenly;
                 margin-bottom: 1.5em;
 
-                & button {
-                    flex: 0 0 10%;
+                @include responsive( small-phone ) {
+                    justify-content: space-between;
+                }
+
+                & i {
+                    flex: 0 0 5%;
+
+                    @include responsive( small-phone ) {
+                        flex: 0 0 10%;
+                    }
                 }
 
                 & select {
                     flex: 0 0 40%;
+
+                    @include responsive( small-phone ) {
+                        flex: 0 0 50%;
+                    }
                 }
 
                 & input {
+                    width: 100%;
                     flex: 0 0 20%;
+
+                    @include responsive( small-phone ) {
+                        flex: 0 0 40%;
+                    }
                 }
             }
 
@@ -334,11 +378,8 @@
             }
 
             & .remove-button {
-                padding: 0.5em 1em;
-                border-radius: 0.2em;
-                border: 1px solid var(--template-secodary-color-invert, red);
-                background-color: var(--template-secodary-color-invert, red);
-                color: white;
+                font-size: 1.5em;
+                color: var(--template-secodary-color-invert, red);
             }
         }
 
@@ -348,10 +389,22 @@
             display: flex;
             justify-content: space-between;
 
+            @include responsive( phone ) {
+                flex-wrap: wrap;
+                justify-content: space-around;
+            }
+
             & .item-description {
                 width: 100%;
                 min-height: 6em;
                 padding: 0.5em;
+                flex: 0 0 48%;
+
+                @include responsive( phone ) {
+                    flex: 0 0 95%;
+                    margin-top: 2em;
+                    min-height: 12em;
+                }
 
                 &.new-item-description {
                     flex-grow: 1;
@@ -361,15 +414,15 @@
             & .image-container {
                 flex: 0 0 48%;
 
+                @include responsive( phone ) {
+                    flex: 0 0 95%;
+                }
+
                 & img {
                     display: block;
                     width: 100%;
                     height: auto;
                 }
-            }
-
-            & textarea {
-                flex: 0 0 48%;
             }
         }
 
