Small touches on the headings and the footer..

--- a/Foody.Web/Views/Shared/_Layout.cshtml
+++ b/Foody.Web/Views/Shared/_Layout.cshtml
@@ -39,17 +39,22 @@
             <section class="footer-sitemap">
                 <h3>Sitemap</h3>
                 <ul>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">About Us</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Disclaimer">Disclaimer</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Diary" asp-action="Index">Diary</a></li>
+                    <li><a asp-area="" asp-controller="Articles" asp-action="Index">Articles</a></li>
+                    <li><a asp-area="" asp-controller="Knowledge" asp-action="Index">Knowledge Base</a></li>
+                    <li><a asp-area="" asp-controller="Administration" asp-action="Index">Administration</a></li>
                 </ul>
             </section>
             <section class="footer-contacts">
                 <h3>Contacts</h3>
                 <ul>
-                    <li>Address</li>
-                    <li>Phone</li>
-                    <li>Email</li>
+                    <li><i class="fas fa-map-marker"></i> Bulgaria, Burgas, Tsar Simeon 31, 8000</li>
+                    <li><i class="fas fa-phone"></i> +35987299966</li>
+                    <li><i class="fas fa-envelope"></i> <email>contacts@foody.net</email></li>
                 </ul>
             </section>
         </div>
