--- a/Foody.Web/Views/Diary/Index.cshtml
+++ b/Foody.Web/Views/Diary/Index.cshtml
@@ -95,14 +95,15 @@
                             </div>
                         </div>
 
-                        <input type="submit" class="submit-button" value="Create Macro Element" />
+                        <input type="submit" class="submit-button" value="Add Meal" />
                     </form>
                 </li>
+
                 <li class="meal-item">
                     <div class="toggle-area">
-                        <p>Time of consumption: <time>13/08/2019 19:00</time></p>
-                        <p>Calories: 700kcal</p>
-                        <p>Comment: dinner</p>
+                        <p><time>13/08/2019 19:00</time></p>
+                        <p>700kcal</p>
+                        <p>dinner</p>
                     </div>
 
                     <form class="on-click-area" action="#">
@@ -111,7 +112,7 @@
                             <input type="text" name="1MealDate" id="1MealDate" value="13/08/2019" />
                             <label for="1MealTime">Time:</label>
                             <input type="text" name="1MealTime" id="1MealTime" value="19:00" />
-                            <label for="newMealTime">Comment:</label>
+                            <label for="1MealComment">Comment:</label>
                             <input type="text" name="1MealComment" id="1MealComment" value="dinner" />
                         </div>
 
@@ -121,7 +122,7 @@
                                 <ul>
                                     <li class="food-item">
                                         <i class="fas fa-times remove-button"></i>
-                                        <select name="1|ItemNewMeal" id="1|ItemNewMeal">
+                                        <select name="1|ItemMeal1" id="1|ItemMeal1">
                                             <option value="potato">Potatoes</option>
                                             <option value="tomato">Tomatoes</option>
                                             <option value="eggs">Eggs</option>
@@ -130,11 +131,11 @@
                                             <option value="tableSalt">Table Salt</option>
                                             <option value="garlic">Garlic</option>
                                         </select>
-                                        <input type="number" name="1|AmountNewMeal" id="1|AmountNewMeal" value="20" />
+                                        <input type="number" name="1|AmountMeal1" id="1|AmountMeal1" value="20" />
                                     </li>
                                     <li class="food-item">
                                         <i class="fas fa-times remove-button"></i>
-                                        <select name="2|ItemNewMeal" id="2|ItemNewMeal">
+                                        <select name="2|ItemMeal1" id="2|ItemMeal1">
                                             <option value="potato">Potatoes</option>
                                             <option value="tomato">Tomatoes</option>
                                             <option value="eggs">Eggs</option>
@@ -143,7 +144,7 @@
                                             <option value="tableSalt" selected>Table Salt</option>
                                             <option value="garlic">Garlic</option>
                                         </select>
-                                        <input type="number" name="2|AmountNewMeal" id="2|AmountNewMeal" value="3" />
+                                        <input type="number" name="2|AmountMeal1" id="2|AmountMeal1" value="3" />
                                     </li>
                                 </ul>
 
@@ -155,7 +156,7 @@
                                 <ul>
                                     <li class="recipe">
                                         <i class="fas fa-times remove-button"></i>
-                                        <select name="1|RecipeNewMeal" id="1|RecipeNewMeal">
+                                        <select name="1|RecipeMeal1" id="1|RecipeMeal1">
                                             <option value="musaka" selected>Musaka</option>
                                             <option value="guvech">Guvech</option>
                                             <option value="tarator">Tarator</option>
@@ -164,11 +165,11 @@
                                             <option value="shopSalad">Shopska Salata</option>
                                             <option value="shepSalad">Shepherd Salad</option>
                                         </select>
-                                        <input type="number" name="1|RecipeAmountNewMeal" id="1|RecipeAmountNewMeal" value="300" />
+                                        <input type="number" name="1|RecipeAmountMeal1" id="1|RecipeAmountMeal1" value="300" />
                                     </li>
                                     <li class="recipe">
                                         <i class="fas fa-times remove-button"></i>
-                                        <select name="2|RecipeNewMeal" id="2|RecipeNewMeal">
+                                        <select name="2|RecipeMeal1" id="2|RecipeMeal1">
                                             <option value="musaka">Musaka</option>
                                             <option value="guvech">Guvech</option>
                                             <option value="tarator">Tarator</option>
@@ -177,7 +178,7 @@
                                             <option value="shopSalad" selected>Shopska Salata</option>
                                             <option value="shepSalad">Shepherd Salad</option>
                                         </select>
-                                        <input type="number" name="2|RecipeAmountNewMeal" id="2|RecipeAmountNewMeal" value="300" />
+                                        <input type="number" name="2|RecipeAmountMeal1" id="2|RecipeAmountMeal1" value="300" />
                                     </li>
                                 </ul>
 
@@ -185,10 +186,191 @@
                             </div>
                         </div>
 
-                        <input type="submit" class="submit-button" value="Create Macro Element" />
+                        <input type="submit" class="submit-button" value="Edit Meal" />
                     </form>
                 </li>
 
+                <li class="meal-item">
+                    <div class="toggle-area">
+                        <p><time>12/08/2019 19:00</time></p>
+                        <p>523kcal</p>
+                        <p>breakfast</p>
+                    </div>
+
+                    <form class="on-click-area" action="#">
+                        <div class="date-and-time">
+                            <label for="2MealDate">Date:</label>
+                            <input type="text" name="2MealDate" id="2MealDate" value="13/08/2019" />
+                            <label for="2MealTime">Time:</label>
+                            <input type="text" name="2MealTime" id="2MealTime" value="19:00" />
+                            <label for="2MealComment">Comment:</label>
+                            <input type="text" name="2MealComment" id="2MealComment" value="dinner" />
+                        </div>
+
+                        <div class="meal-item-contents">
+                            <div class="meal-food-items">
+                                <h5>Food Items</h5>
+                                <ul>
+                                    <li class="food-item">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="1|ItemMeal2" id="1|ItemMeal2">
+                                            <option value="potato">Potatoes</option>
+                                            <option value="tomato">Tomatoes</option>
+                                            <option value="eggs">Eggs</option>
+                                            <option value="flour">Flour</option>
+                                            <option value="oliveOil" selected>Olive Oil</option>
+                                            <option value="tableSalt">Table Salt</option>
+                                            <option value="garlic">Garlic</option>
+                                        </select>
+                                        <input type="number" name="1|AmountMeal2" id="1|AmountMeal2" value="20" />
+                                    </li>
+                                    <li class="food-item">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="2|ItemMeal2" id="2|ItemMeal2">
+                                            <option value="potato">Potatoes</option>
+                                            <option value="tomato">Tomatoes</option>
+                                            <option value="eggs">Eggs</option>
+                                            <option value="flour">Flour</option>
+                                            <option value="oliveOil">Olive Oil</option>
+                                            <option value="tableSalt" selected>Table Salt</option>
+                                            <option value="garlic">Garlic</option>
+                                        </select>
+                                        <input type="number" name="2|AmountMeal2" id="2|AmountMeal2" value="3" />
+                                    </li>
+                                </ul>
+
+                                <button class="add-button">Add Food Item</button>
+                            </div>
+
+                            <div class="meal-recipes">
+                                <h5>Recipes</h5>
+                                <ul>
+                                    <li class="recipe">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="1|RecipeMeal2" id="1|RecipeMeal2">
+                                            <option value="musaka" selected>Musaka</option>
+                                            <option value="guvech">Guvech</option>
+                                            <option value="tarator">Tarator</option>
+                                            <option value="scrambEggs">Scrambled Eggs</option>
+                                            <option value="friedMeatballs">Fried Meatballs</option>
+                                            <option value="shopSalad">Shopska Salata</option>
+                                            <option value="shepSalad">Shepherd Salad</option>
+                                        </select>
+                                        <input type="number" name="1|RecipeAmountMeal2" id="1|RecipeAmountMeal2" value="300" />
+                                    </li>
+                                    <li class="recipe">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="2|RecipeMeal2" id="2|RecipeMeal2">
+                                            <option value="musaka">Musaka</option>
+                                            <option value="guvech">Guvech</option>
+                                            <option value="tarator">Tarator</option>
+                                            <option value="scrambEggs">Scrambled Eggs</option>
+                                            <option value="friedMeatballs">Fried Meatballs</option>
+                                            <option value="shopSalad" selected>Shopska Salata</option>
+                                            <option value="shepSalad">Shepherd Salad</option>
+                                        </select>
+                                        <input type="number" name="2|RecipeAmountMeal2" id="2|RecipeAmountMeal2" value="300" />
+                                    </li>
+                                </ul>
+
+                                <button class="add-button">Add Recipe</button>
+                            </div>
+                        </div>
+
+                        <input type="submit" class="submit-button" value="Edit Meal" />
+                    </form>
+                </li>
+
+                <li class="meal-item">
+                    <div class="toggle-area">
+                        <p><time>11/08/2019 11:00</time></p>
+                        <p>345kcal</p>
+                        <p>brunch</p>
+                    </div>
+
+                    <form class="on-click-area" action="#">
+                        <div class="date-and-time">
+                            <label for="3MealDate">Date:</label>
+                            <input type="text" name="3MealDate" id="3MealDate" value="13/08/2019" />
+                            <label for="3MealTime">Time:</label>
+                            <input type="text" name="3MealTime" id="3MealTime" value="19:00" />
+                            <label for="3MealComment">Comment:</label>
+                            <input type="text" name="3MealComment" id="3MealComment" value="dinner" />
+                        </div>
+
+                        <div class="meal-item-contents">
+                            <div class="meal-food-items">
+                                <h5>Food Items</h5>
+                                <ul>
+                                    <li class="food-item">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="1|ItemMeal3" id="1|ItemMeal3">
+                                            <option value="potato">Potatoes</option>
+                                            <option value="tomato">Tomatoes</option>
+                                            <option value="eggs">Eggs</option>
+                                            <option value="flour">Flour</option>
+                                            <option value="oliveOil" selected>Olive Oil</option>
+                                            <option value="tableSalt">Table Salt</option>
+                                            <option value="garlic">Garlic</option>
+                                        </select>
+                                        <input type="number" name="1|AmountMeal3" id="1|AmountMeal3" value="20" />
+                                    </li>
+                                    <li class="food-item">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="2|ItemMeal3" id="2|ItemMeal3">
+                                            <option value="potato">Potatoes</option>
+                                            <option value="tomato">Tomatoes</option>
+                                            <option value="eggs">Eggs</option>
+                                            <option value="flour">Flour</option>
+                                            <option value="oliveOil">Olive Oil</option>
+                                            <option value="tableSalt" selected>Table Salt</option>
+                                            <option value="garlic">Garlic</option>
+                                        </select>
+                                        <input type="number" name="2|AmountMeal3" id="2|AmountMeal3" value="3" />
+                                    </li>
+                                </ul>
+
+                                <button class="add-button">Add Food Item</button>
+                            </div>
+
+                            <div class="meal-recipes">
+                                <h5>Recipes</h5>
+                                <ul>
+                                    <li class="recipe">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="1|RecipeMeal3" id="1|RecipeMeal3">
+                                            <option value="musaka" selected>Musaka</option>
+                                            <option value="guvech">Guvech</option>
+                                            <option value="tarator">Tarator</option>
+                                            <option value="scrambEggs">Scrambled Eggs</option>
+                                            <option value="friedMeatballs">Fried Meatballs</option>
+                                            <option value="shopSalad">Shopska Salata</option>
+                                            <option value="shepSalad">Shepherd Salad</option>
+                                        </select>
+                                        <input type="number" name="1|RecipeAmountMeal3" id="1|RecipeAmountMeal3" value="300" />
+                                    </li>
+                                    <li class="recipe">
+                                        <i class="fas fa-times remove-button"></i>
+                                        <select name="2|RecipeMeal3" id="2|RecipeMeal3">
+                                            <option value="musaka">Musaka</option>
+                                            <option value="guvech">Guvech</option>
+                                            <option value="tarator">Tarator</option>
+                                            <option value="scrambEggs">Scrambled Eggs</option>
+                                            <option value="friedMeatballs">Fried Meatballs</option>
+                                            <option value="shopSalad" selected>Shopska Salata</option>
+                                            <option value="shepSalad">Shepherd Salad</option>
+                                        </select>
+                                        <input type="number" name="2|RecipeAmountMeal3" id="2|RecipeAmountMeal3" value="300" />
+                                    </li>
+                                </ul>
+
+                                <button class="add-button">Add Recipe</button>
+                            </div>
+                        </div>
+
+                        <input type="submit" class="submit-button" value="Edit Meal" />
+                    </form>
+                </li>
             </ul>
         </section>
 
