--- a/Foody.Web/wwwroot/css/typography.scss
+++ b/Foody.Web/wwwroot/css/typography.scss
@@ -34,6 +34,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;
     padding-bottom: 0.5em;
+    color: var(--template-primary-color, blue);
 }
 
 h1 {
