--- a/Foody.Web/Views/Articles/Index.cshtml
+++ b/Foody.Web/Views/Articles/Index.cshtml
@@ -19,6 +19,19 @@
         <h2>Articles</h2>
 
         <ul class="article-tabs-list">
+            <li class="article-tab exercise">
+                <a href="#">
+                    <div class="image-container">
+                        <img src="https://cdn1.coachmag.co.uk/sites/coachmag/files/styles/16x9_480/public/2018/08/full-body-exercises-deadlift.jpg?itok=ANX3e7Vd&timestamp=1534517890" />
+                    </div>
+                    <div class="tab-body">
+                        <h4 class="tab-header">Best whole body exercises</h4>
+                        <p class="tab-text">In order to maximise your gains you need to implement whole body exercises... </p>
+                        <p class="tab-footer">Posted by Yuri Gagarin on <time>11.04.1986</time></p>
+                    </div>
+                </a>
+            </li>
+
             <li class="article-tab nutrition">
                 <a href="#">
                     <div class="image-container">
@@ -71,6 +84,19 @@
                 </a>
             </li>
 
+            <li class="article-tab lifestyle">
+                <a href="#">
+                    <div class="image-container">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9WCTdejc7iLQQq1yLlnGRbcukk0fErA_qsCO-uFhef2Dk0tzT" />
+                    </div>
+                    <div class="tab-body">
+                        <h4 class="tab-header">Top 5 methods for relaxation</h4>
+                        <p class="tab-text">Relaxation after a stresful day or a heavy workout si crucial for one's health..</p>
+                        <p class="tab-footer">Posted by Kalin Lyubenov on <time>01.08.2019</time></p>
+                    </div>
+                </a>
+            </li>
+
             <li class="article-tab exercise">
                 <a href="#">
                     <div class="image-container">
@@ -80,6 +106,19 @@
                         <h4 class="tab-header">Best whole body exercises</h4>
                         <p class="tab-text">In order to maximise your gains you need to implement whole body exercises... </p>
                         <p class="tab-footer">Posted by Yuri Gagarin on <time>11.04.1986</time></p>
+                    </div>
+                </a>
+            </li>
+
+            <li class="article-tab nutrition">
+                <a href="#">
+                    <div class="image-container">
+                        <img src="https://www.ditchthecarbs.com/wp-content/uploads/2016/09/rsz_healthy-foods-for-a-low-carb-diet.jpg" />
+                    </div>
+                    <div class="tab-body">
+                        <h4 class="tab-header">Are carbohydrates dangerous?</h4>
+                        <p class="tab-text">Never has a topic galvanised the Diabetes Forum as much as the carbohydrate... </p>
+                        <p class="tab-footer">Posted by Tim Burton on <time>21.04.2019</time></p>
                     </div>
                 </a>
             </li>
