--- a/Foody.Web/Views/Diary/Index.cshtml
+++ b/Foody.Web/Views/Diary/Index.cshtml
@@ -30,7 +30,7 @@
                                 <h5>Food Items</h5>
                                 <ul>
                                     <li class="food-item">
-                                        <button class="remove-button"><i class="fas fa-times"></i></button>
+                                        <i class="fas fa-times remove-button"></i>
                                         <select name="1|ItemNewMeal" id="1|ItemNewMeal">
                                             <option value="potato">Potatoes</option>
                                             <option value="tomato">Tomatoes</option>
@@ -43,7 +43,7 @@
                                         <input type="number" name="1|AmountNewMeal" id="1|AmountNewMeal" placeholder="Please enter amount.." />
                                     </li>
                                     <li class="food-item">
-                                        <button class="remove-button"><i class="fas fa-times"></i></button>
+                                        <i class="fas fa-times remove-button"></i>
                                         <select name="2|ItemNewMeal" id="2|ItemNewMeal">
                                             <option value="potato">Potatoes</option>
                                             <option value="tomato">Tomatoes</option>
@@ -64,7 +64,7 @@
                                 <h5>Recipes</h5>
                                 <ul>
                                     <li class="recipe">
-                                        <button class="remove-button"><i class="fas fa-times"></i></button>
+                                        <i class="fas fa-times remove-button"></i>
                                         <select name="1|RecipeNewMeal" id="1|RecipeNewMeal">
                                             <option value="musaka">Musaka</option>
                                             <option value="guvech">Guvech</option>
@@ -77,7 +77,7 @@
                                         <input type="number" name="1|RecipeAmountNewMeal" id="1|RecipeAmountNewMeal" placeholder="Please enter amount.." />
                                     </li>
                                     <li class="recipe">
-                                        <button class="remove-button"><i class="fas fa-times"></i></button>
+                                        <i class="fas fa-times remove-button"></i>
                                         <select name="2|RecipeNewMeal" id="2|RecipeNewMeal">
                                             <option value="musaka">Musaka</option>
                                             <option value="guvech">Guvech</option>
@@ -388,12 +388,12 @@
             <div class="statistics custom-statistics">
                 <h4>Custom period</h4>
                 
-                <form action="#" method="post">
+                <form action="#">
                     <label for="fromTime">From:</label>
-                    <input type="text" name="fromTime" id="fromTime" paceholder="07/08/2019 12:00" />
+                    <input type="text" name="fromTime" id="fromTime" placeholder="07/08/2019 12:00" />
                     <label for="toTime">To:</label>
-                    <input type="text" name="toTime" id="toTime" paceholder="13/08/2019 19:00" />
-                    <input type="submit" name="getStatistics" value="Get statistics" />
+                    <input type="text" name="toTime" id="toTime" placeholder="13/08/2019 19:00" />
+                    <input type="submit" class="submit-button" name="getStatistics" value="Get statistics" />
                 </form>
 
                 <p>Average daily calories:</p>
