--- a/Foody.Web/Views/Administration/_RecipesPartial.cshtml
+++ b/Foody.Web/Views/Administration/_RecipesPartial.cshtml
@@ -30,6 +30,7 @@
                         <li class="food-item">
                             <i class="fas fa-times remove-button"></i>
                             <select name="1|ItemNewRecipe" id="1|ItemNewRecipe">
+                                <option disabled selected> -- food items -- </option>
                                 <option value="potato">Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
                                 <option value="eggs">Eggs</option>
@@ -40,19 +41,7 @@
                             </select>
                             <input type="number" name="1|AmountNewRecipe" id="1|AmountNewRecipe" placeholder="Please enter amount.." />
                         </li>
-                        <li class="food-item">
-                            <i class="fas fa-times remove-button"></i>
-                            <select name="2|ItemNewRecipe" id="2|ItemNewRecipe">
-                                <option value="potato">Potatoes</option>
-                                <option value="tomato">Tomatoes</option>
-                                <option value="eggs">Eggs</option>
-                                <option value="flour">Flour</option>
-                                <option value="oliveOil">Olive Oil</option>
-                                <option value="tableSalt">Table Salt</option>
-                                <option value="garlic">Garlic</option>
-                            </select>
-                            <input type="number" name="2|AmountNewRecipe" id="2|AmountNewRecipe" placeholder="Please enter amount.." />
-                        </li>
+
                     </ul>
 
                     <button class="add-button">Add Food Item</button>
@@ -86,6 +75,7 @@
                         <li class="food-item">
                             <i class="fas fa-times remove-button"></i>
                             <select name="1|Itemmusaka" id="1|Itemmusakae">
+                                <option disabled> -- food items -- </option>
                                 <option value="potato" selected>Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
                                 <option value="eggs">Eggs</option>
@@ -94,11 +84,12 @@
                                 <option value="tableSalt">Table Salt</option>
                                 <option value="garlic">Garlic</option>
                             </select>
-                            <input type="number" name="1|Amountmusaka" id="1|Amountmusaka" value="200" />
+                            <input type="number" name="1|Amountmusaka" id="1|Amountmusaka" value="200" placeholder="Please enter amount.."/>
                         </li>
                         <li class="food-item">
                             <i class="fas fa-times remove-button"></i>
                             <select name="2|Itemmusaka" id="2|Itemmusaka">
+                                <option disabled> -- food items -- </option>
                                 <option value="potato">Potatoes</option>
                                 <option value="tomato">Tomatoes</option>
                                 <option value="eggs" selected>Eggs</option>
@@ -107,7 +98,7 @@
                                 <option value="tableSalt">Table Salt</option>
                                 <option value="garlic">Garlic</option>
                             </select>
-                            <input type="number" name="2|Amountmusaka" id="2|Amountmusaka" value="120" />
+                            <input type="number" name="2|Amountmusaka" id="2|Amountmusaka" value="120" placeholder="Please enter amount.."/>
                         </li>
                     </ul>
 
